# personal-manager-bot

./: README.md  config.py  main.py  pyproject.toml
bot/: keyboards.py  lexicon.py
data/: schedule.json
src/: function_json_file.py  utils.py
